# odoo-mcp

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISHING_SUMMARY.md  PYPI_SETUP.md  README.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.json  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MCP_REGISTRY_PUBLISHING.md  PUBLISHING_GUIDE.md  PYPI_PUBLISHING.md
examples/: basic_usage.py  mcp_config.json
scripts/: publish_to_docker.sh  publish_to_mcp_registry.sh  publish_to_pypi.sh
src/odoo_mcp/: __init__.py  __main__.py  cli.py  config.py  healthcheck.py  server.py
src/odoo_mcp/core/: __init__.py  client.py  domains.py  security.py  session.py
src/odoo_mcp/observability/: __init__.py  audit.py  logging.py
src/odoo_mcp/schemas/: __init__.py  business.py  common.py
src/odoo_mcp/security/: __init__.py  audit.py  policy.py  redaction.py
src/odoo_mcp/services/: __init__.py  accounting_service.py  calendar_service.py  capability_service.py  chatter_service.py  contract_service.py  crm_service.py  generic_service.py  helpdesk_service.py  hr_service.py  invoice_service.py  partner_service.py  project_service.py  purchase_service.py  sales_service.py  view_migration_service.py  workforce_service.py
src/odoo_mcp/tools/: __init__.py  accounting.py  actions.py  business_ops.py  chatter.py  introspection.py  partners.py  projects.py  purchases.py  records.py
tests/: __init__.py  conftest.py  test_capability_tools.py  test_partner_dedupe.py  test_security.py
